# votiface-facerecog

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Votiface/: checkfaces.py  facerecog.py  flowchart.drawio  requirements.txt  usecase.drawio
