[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "votiface-facerecog"
version = "2.0.0"
description = "Face recognition system with Python and OpenCV"
authors = [{name = "Utsav Paudel", email = "utsavpaudel111@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.9.0",
    "face-recognition>=1.3.0",
    "numpy>=1.26.0",
    "pillow>=10.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]
django = [
    "Django>=5.0.0",
    "djangorestframework>=3.14.0",
    "Pyrebase4>=4.7.0",
    "requests>=2.31.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
